--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Jack Pauly</title>
+
+        <link href="http://fonts.cdnfonts.com/css/lemonmilk" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+        <link rel='stylesheet' href='root.css'>
+    </head>
+    <h1> Jack Pauly </h1>
+    <body> Hello World </body>
+</html>
