--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jack Pauly</title>
 
-        <link href="http://fonts.cdnfonts.com/css/lemonmilk" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+        <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/lemonmilk">
         <link rel='stylesheet' href='root.css'>
+        <!--
+        -->
     </head>
-    <h1> Jack Pauly </h1>
-    <body> Hello World </body>
+    <body>
+        <div class="main">
+            <h1> Jack Pauly </h1>
+            <p>This is a paragraph</p>
+        </div>
+    </body>
 </html>
