added links to github & linkedin

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
         <!-- Title of the page -->
         <title>Jack Pauly</title>
 
-        <!-- link rel="stylesheet" means to use a persistent stylesheet-->
-        
+        <!-- link rel="stylesheet" means to use a persistent stylesheet (root.css)-->
         <link rel='stylesheet' href='root.css'>
 
     </head>
     <body>
 
         <div class="main">
-            <h1> Jack Pauly </h1>
-            <p>This is a paragraph</p>
+            <main-title> Jack Pauly </main-title>
+            <p>Welcome!</p>
+            <p>Website is still a WIP. Stay tuned for updates</p>
 
-            <a class='home' href="./blog">Blog</a>
+            <a class='home-link' href="./blog">Blog</a>
+            <a href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
         </div>
     </body>
 </html>
