--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <!-- link rel="stylesheet" means to use a persistent stylesheet (root.css)-->
         <link rel='stylesheet' href='root.css'>
+        <link rel='stylesheet' href='http://fonts.cdnfonts.com/css/lemonmilk'>
 
     </head>
     <body>
