fixed lemon milk font???? again??

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
         <!-- link rel="stylesheet" means to use a persistent stylesheet (root.css)-->
         <link rel='stylesheet' href='root.css'>
-        <link rel='stylesheet' href='http://fonts.cdnfonts.com/css/lemonmilk'>
+        <link rel='stylesheet' href='/fonts/lemonmilk.css'>
 
     </head>
     <body>
 
         <div class="main">
-            <main-title> Jack Pauly </main-title>
+            <main-title>Jack Pauly</main-title>
             <p>Welcome!</p>
             <p>Website is still a WIP. Stay tuned for updates</p>
 
