I CAN BLOG NOW YAYAYAYYA. thank you suneel.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <p>Website is still a WIP. Stay tuned for updates</p>
 
             <a class='home-link' href="./blog">Blog</a>
-            <a href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
+            <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
+            <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
         </div>
     </body>
 </html>
