--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>Welcome!</p>
             <p>Website is still a WIP. Stay tuned for updates</p>
 
-            <a class='home-link' href="./blog">Blog</a>
+            <a class='home-link' href="./blog/index.html">Blog</a>
             <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
             <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
         </div>
