Added large about me on home page, removed unnecessary css elements

--- a/index.html
+++ b/index.html
@@ -10,21 +10,40 @@
         <!-- Title of the page -->
         <title>Jack Pauly</title>
 
-        <!-- link rel="stylesheet" means to use a persistent stylesheet (root.css)-->
-        <link rel='stylesheet' href='root.css'>
+        <!-- link rel="stylesheet" means to use a persistent stylesheet (style.css)-->
+        <link rel='stylesheet' href='style.css'>
         <link rel='stylesheet' href='/fonts/lemonmilk.css'>
 
     </head>
     <body>
 
         <div class="main">
-            <main-title>Jack Pauly</main-title>
+            <h1>Jack Pauly</h1>
             <p>Welcome!</p>
             <p>Website is still a WIP. Stay tuned for updates</p>
 
             <a class='home-link' href="./blog/index.html">Blog</a>
             <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
             <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
+            <a class='home-link' href="https://www.youtube.com/watch?v=Ro5hRkU1vbw" target="_blank">Pauly's Pocket YouTube</a>
+            <h2>About!</h2>
+            <p>Hi! I'm a Senior Computer Science Major at Chapman University. I'm interested in software development and front-end design/development.</p>
+            <p>
+                Outside of programming, music plays a huge part of my life.
+                I spend a lot of my free time listening, discovering, talking about, and writing about music.
+                You can find a lot of my ramblings on my <a class='inline' href='./blog/index.html'>blog</a>.
+            </p>
+            <p>
+                I'm also a Education Director for <a class='inline' href='https://chapmanradio.live/' target='_blank'>Chapman Radio</a>, 
+                Chapman University's student-run online radio station. In addition to being a staff member for the organization, 
+                I also produce and host my own radio show on the site, titled
+                <a class='inline' href='https://chapmanradio.live/show/paulys-pocket/' target='_blank'>Pauly's Pocket</a>, 
+                a project I am incredibly fond of.
+            </p>
+            <p>I also enjoy graphic design and digital media creation with tools like Adobe Photoshop and Premiere Pro, 
+                two tools I use to produce my radio show.
+            </p>
+
         </div>
     </body>
 </html>
