testing new paulys pocket page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <p>Website is still a WIP. Stay tuned for updates</p>
 
             <a class='home-link' href="./blog/index.html">Blog</a>
+            <a class='home-link' href="paulys_pocket.html">Pauly's Pocket</a>
             <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
             <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
-            <a class='home-link' href="https://www.youtube.com/watch?v=Ro5hRkU1vbw" target="_blank">Pauly's Pocket YouTube</a>
+            <!-- <a class='home-link' href="https://www.youtube.com/watch?v=Ro5hRkU1vbw" target="_blank">Pauly's Pocket YouTube</a> -->
             <h2>About!</h2>
             <p>Hi! I'm a Senior Computer Science Major at Chapman University. I'm interested in software development and front-end design/development.</p>
             <p>
