--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <p>Welcome!</p>
             <p>Website is still a WIP. Stay tuned for updates</p>
 
-            <a class='home-link' href="./blog/index.html">Blog</a>
-            <a class='home-link' href="paulys_pocket.html">Pauly's Pocket</a>
+            <a class='home-link' href="./blog/index.html">BLOG</a>
+            <a class='home-link' href="paulys_pocket.html">PAULY'S POCKET VODS</a>
+            <br>
             <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
             <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
             <!-- <a class='home-link' href="https://www.youtube.com/watch?v=Ro5hRkU1vbw" target="_blank">Pauly's Pocket YouTube</a> -->
