updating video feed

--- a/paulys_pocket.html
+++ b/paulys_pocket.html
@@ -20,6 +20,15 @@
             <center>
 
                 <div class='box'>
+                        <h3>Episode 24: Aux Etiquette</h3>
+                        <p><em>borderline-malnourished pophead gives lecture on Aux Etiquette (a concept he made up)</em></p>
+                        <p>10/07/2022</p>
+                        <div class = 'embed-youtube'>
+                            <iframe src='https://www.youtube.com/embed/_ZxHHYR7pTc' width='750' height='563'</iframe>
+                        </div>
+                </div>
+    
+                <div class='box'>
                         <h3>Episode 23: Sunsets</h3>
                         <p><em>R&B STAR JACK "WAVY" PAULY PUTS ON THE PERFORMANCE OF A LIFETIME</em></p>
                         <p>09/30/2022</p>
