updated video feed

--- a/paulys_pocket.html
+++ b/paulys_pocket.html
@@ -20,6 +20,15 @@
             <center>
 
                 <div class='box'>
+                        <h3>Episode 26: Rock/New-Wave</h3>
+                        <p><em>Mr. Pauly busts it down David Byrne style</em></p>
+                        <p>10/23/2022</p>
+                        <div class = 'embed-youtube'>
+                            <iframe src='https://www.youtube.com/embed/VshJzv3e774' width='750' height='563'></iframe>
+                        </div>
+                </div>
+    
+                <div class='box'>
                         <h3>Episode 24: Aux Etiquette</h3>
                         <p><em>borderline-malnourished pophead gives lecture on Aux Etiquette (a concept he made up)</em></p>
                         <p>10/07/2022</p>
