--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <a class='home-link' href="paulys_pocket.html">PAULY'S POCKET VODS</a>
             <br>
             <a class='home-link' href="https://github.com/Jackmpauly" target="_blank">GitHub</a>
-            <a class='home-link' href="https://www.linkedin.com/in/jack-pauly-0202b6203/" target="_blank">LinkedIn</a>
+            <a class='home-link' href="https://www.linkedin.com/in/jackmpauly/" target="_blank">LinkedIn</a>
             <!-- <a class='home-link' href="https://www.youtube.com/watch?v=Ro5hRkU1vbw" target="_blank">Pauly's Pocket YouTube</a> -->
             <h2>About!</h2>
-            <p>Hi! I'm a Senior Computer Science Major at Chapman University. I'm interested in software development and front-end design/development.</p>
+            <p>Hi! I'm a Senior Computer Science Major at Chapman University. I'm interested in software development and engineering</p>
             <p>
                 Outside of programming, music plays a huge part of my life.
                 I spend a lot of my free time listening, discovering, talking about, and writing about music.
